--- a/waiter_app/app/views/dishes/edit.html.erb
+++ b/waiter_app/app/views/dishes/edit.html.erb
@@ -5,9 +5,10 @@
     <input type="text" name="dish[name]" value="<%= @dish.name %>" />
     <input type="text" name="dish[description]" value="<%= @dish.description %>" />
     <select name="dish[course]">
-      <option value="<%= @dish.course %>">1</option>
-      <option value="<%= @dish.course %>">2</option>
-      <option value="<%= @dish.course %>">3</option>
+      <option value=1>1</option>
+      <option value=2>2</option>
+      <option value=3>3</option>
+      <option value=4>4</option>
     </select>
     <input type="submit" value="Change this dish!" />
   </form>
