--- a/waiter_app/app/views/dishes/show.html.erb
+++ b/waiter_app/app/views/dishes/show.html.erb
@@ -3,6 +3,11 @@
   <p><%= @dish.description %></p>
   <p>Course: <%= @dish.course %></p>
   <p>Cost: $<%= @dish.cost %></p>
+  <%= @dish.ingredients %>
+  <h4>Ingredients:</h4>
+  <% @dish.ingredients.each do |ing| %>
+    <p><%= ing[:name] %></p>
+  <% end %>
   <%= link_to "Edit this dish?", edit_dish_path(@dish.id) %>
   <%= link_to "Delete this dish?", dish_path(@dish.id), method: :delete %>
 </div>
