--- a/waiter_app/app/views/users/show.html.erb
+++ b/waiter_app/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @user[:email] %>:</h1>
+<%= link_to "Add some dishes!", dishes_path %>
 <% if @user.dishes.length > 0 %>
   <% @user.dishes.each do |dish| %>
       <p><%= dish[:name] %></p>
