--- a/waiter_app/app/views/ingredients/new.html.erb
+++ b/waiter_app/app/views/ingredients/new.html.erb
@@ -1,2 +1,1 @@
-<h1>Ingredients#new</h1>
-<p>Find me in app/views/ingredients/new.html.erb</p>
+<h1>Add a new Ingredient to our list so that we dont include it!</h1>
