most of the ingredients routes work, only have to add the delete functionality to the ingredients

--- a/waiter_app/app/views/ingredients/show.html.erb
+++ b/waiter_app/app/views/ingredients/show.html.erb
@@ -1,2 +1,3 @@
 <h1><%= @ingredient[:name] %></h1>
 <p><%=@ingredient[:description] %></p>
+<%= link_to "Edit this ingredient", edit_ingredient_path(@ingredient.id) %>
