--- a/waiter_app/app/views/ingredients/edit.html.erb
+++ b/waiter_app/app/views/ingredients/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Ingredients#edit</h1>
-<p>Find me in app/views/ingredients/edit.html.erb</p>
+<h1>Edit this ingredient</h1>
+<form action="/ingredients/<%= @ingredient.id %>" method="POST">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+  <input type="hidden" name="_method" value="PUT" />
+  <input type="text" name="ingredient[name]" value="<%= @ingredient.name %>" />
+  <input type="text" name="ingredient[description]" value="<%= @ingredient.description%>" />
+  <input type="submit" value="Chang this ingredient!" />
+</form>
