--- a/waiter_app/app/views/ingredients/index.html.erb
+++ b/waiter_app/app/views/ingredients/index.html.erb
@@ -1,7 +1,8 @@
 <h1>List of all the ingredients used in our recipes</h1>
 <h2>select any ingredient to indicate an allergy</h2>
 <%= link_to "Add an ingredient that's not listed so we can be sure not to include it!", new_ingredient_path %>
-<br><br> 
+<br><br>
 <% @ingredients.each do |ingredient| %>
   <p><%= link_to "#{ingredient[:name]}", ingredient_path(ingredient.id) %></p>
+  <%= link_to "Delete this ingredient?", ingredient_path(ingredient.id), method: :delete %>
 <% end %>
