added allergies pages, forms to post to the user_ingredients table and a delete method to remove it

--- a/waiter_app/app/views/dishes/show.html.erb
+++ b/waiter_app/app/views/dishes/show.html.erb
@@ -9,7 +9,7 @@
       <%= form_tag("/user_ingredients", method: "post") do %>
         <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
         <%= hidden_field(:user_id, "", :value=>current_user.id )%>
-        <%= submit_tag( "allergy")%>
+        <%= submit_tag( "Add Allergy")%>
       <% end %>
       <br>
       <br>
