--- a/waiter_app/app/views/ingredients/index.html.erb
+++ b/waiter_app/app/views/ingredients/index.html.erb
@@ -7,6 +7,6 @@
   <%= form_tag("/user_ingredients", method: "post") do %>
     <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
     <%= hidden_field(:user_id, "", :value=>current_user.id )%>
-    <%= submit_tag( "allergy")%>
+    <%= submit_tag( "Add Allergy")%>
   <% end %>
 <% end %>
