--- a/waiter_app/app/views/users/index.html.erb
+++ b/waiter_app/app/views/users/index.html.erb
@@ -1,4 +1,17 @@
-<% @users.each do |user| %>
+<% if current_user.auth == 2 %>
+  <% @users.each do |user| %>
+    <p><%=user[:email]%>:</p>
+    <% user.dishes.each do |dish| %>
+        <p><%=dish[:name]%></p>
+        <%= link_to "Delete dish from your order?", user_dish_path(dish.id), method: :delete %><br>
+
+    <% end %>
+    <strong>Alergies:</strong>
+    <% user.ingredients.each do |ingredient| %>
+      <p><%=ingredient[:name]%></p>
+    <% end %>
+  <% end %>
+<% else %>
   <p><%=user[:email]%>:</p>
   <% user.dishes.each do |dish| %>
       <p><%=dish[:name]%></p>
