--- a/waiter_app/app/views/dishes/edit.html.erb
+++ b/waiter_app/app/views/dishes/edit.html.erb
@@ -1,15 +1,17 @@
-<div class="form">
-  <form action="/dishes/<%= @dish.id %>" method="POST">
-    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
-    <input type="hidden" name="_method" value="PUT" />
-    <input type="text" name="dish[name]" value="<%= @dish.name %>" />
-    <input type="text" name="dish[description]" value="<%= @dish.description %>" />
-    <select name="dish[course]">
-      <option value=1>1</option>
-      <option value=2>2</option>
-      <option value=3>3</option>
-      <option value=4>4</option>
-    </select>
-    <input type="submit" value="Change this dish!" />
-  </form>
+<div class="dish-edit-container">
+  <div class="form">
+    <form action="/dishes/<%= @dish.id %>" method="POST">
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+      <input type="hidden" name="_method" value="PUT" />
+      <input type="text" name="dish[name]" value="<%= @dish.name %>" />
+      <input type="text" name="dish[description]" value="<%= @dish.description %>" />
+      <select name="dish[course]">
+        <option value=1>1</option>
+        <option value=2>2</option>
+        <option value=3>3</option>
+        <option value=4>4</option>
+      </select>
+      <input type="submit" value="Change this dish!" />
+    </form>
+  </div>
 </div>
