--- a/waiter_app/app/views/dishes/index.html.erb
+++ b/waiter_app/app/views/dishes/index.html.erb
@@ -1,19 +1,21 @@
-<h1>All Dishes</h1>
-<%= link_to "Create New Dish", new_dish_path %>
-<br>
-<% @dishes.each do |dish| %>
-    <br>
-    <h3><%= dish.name %></h3>
-    <%= link_to "Let's get a closer look...", dish_path(dish.id) %>
-    <p><%= dish.description %></p>
-    <p>Course: <%= dish.course %></p>
-    <p>Cost  :$<%= dish.cost %></p>
-    <%= form_tag("/user_dishes", method: "post") do %>
-      <%= hidden_field(:dish_id, "", :value=>dish.id )%>
-      <%= hidden_field(:user_id, "", :value=>current_user.id )%>
-      <%= submit_tag( "Add Dish")%>
-    <% end %>
-    <%= link_to "Edit this dish?", edit_dish_path(dish.id) %>
-    <%= link_to "Delete this dish?", dish_path(dish.id), method: :delete %>
-    <hr>
-<% end %>
+<div class="dish-index-container">
+  <h1>All Dishes</h1>
+  <%= link_to "Create New Dish", new_dish_path %>
+  <br>
+  <% @dishes.each do |dish| %>
+      <br>
+      <h3><%= dish.name %></h3>
+      <%= link_to "Let's get a closer look...", dish_path(dish.id) %>
+      <p><%= dish.description %></p>
+      <p>Course: <%= dish.course %></p>
+      <p>Cost  :$<%= dish.cost %></p>
+      <%= form_tag("/user_dishes", method: "post") do %>
+        <%= hidden_field(:dish_id, "", :value=>dish.id )%>
+        <%= hidden_field(:user_id, "", :value=>current_user.id )%>
+        <%= submit_tag( "Add Dish")%>
+      <% end %>
+      <%= link_to "Edit this dish?", edit_dish_path(dish.id) %>
+      <%= link_to "Delete this dish?", dish_path(dish.id), method: :delete %>
+      <hr>
+  <% end %>
+</div>
