--- a/waiter_app/app/views/dishes/show.html.erb
+++ b/waiter_app/app/views/dishes/show.html.erb
@@ -1,4 +1,4 @@
-<div class = "container">
+<div class = "dish-container">
   <h1><%= @dish.name %></h1>
   <p><%= @dish.description %></p>
   <p>Course: <%= @dish.course %></p>
