--- a/waiter_app/app/views/ingredients/index.html.erb
+++ b/waiter_app/app/views/ingredients/index.html.erb
@@ -1,16 +1,18 @@
-<h1>List of all the ingredients used in our recipes</h1>
-<h2>select any ingredient to indicate an allergy</h2>
-<%= link_to "Add an ingredient that's not listed so we can be sure not to include it!", new_ingredient_path %>
-<br><br>
-<% @ingredients.each do |ing| %>
-  <p><%= link_to "#{ing[:name]}", ingredient_path(ing.id) %></p>
-  <p><%= link_to "Add to dish",
-                  :controller=> "ingredients_dishes",
-                  :action=> "new",
-                  :ingredient_id=>ing[:id] %></p>
-  <%= form_tag("/user_ingredients", method: "post") do %>
-    <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
-    <%= hidden_field(:user_id, "", :value=>current_user.id )%>
-    <%= submit_tag( "Add Allergy")%>
+<div class="ingredient-list-container">
+  <h1>List of all the ingredients used in our recipes</h1>
+  <h2>select any ingredient to indicate an allergy</h2>
+  <%= button_to "Add an ingredient that's not listed so we can be sure not to include it!", new_ingredient_path %>
+  <br><br>
+  <% @ingredients.each do |ing| %>
+    <p><%= button_to "#{ing[:name]}", ingredient_path(ing.id) %></p>
+    <p><%= button_to "Add to dish",
+                    :controller=> "ingredients_dishes",
+                    :action=> "new",
+                    :ingredient_id=>ing[:id] %></p>
+    <%= form_tag("/user_ingredients", method: "post") do %>
+      <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
+      <%= hidden_field(:user_id, "", :value=>current_user.id )%>
+      <%= submit_tag( "Add Allergy")%>
+    <% end %>
   <% end %>
-<% end %>
+</div>
