--- a/waiter_app/app/views/users/index.html.erb
+++ b/waiter_app/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <div class="user-index-container">
-  <% if current_user.auth == 2 %>
+  <% if current_user.auth == 1 %>
     <% @users.each do |user| %>
       <p><%=user[:email]%>:</p>
       <h1>---------------------------------------------------------------</h1>
-      <%= button_to "Delete this order", user_path(user[:id]), method: :delete %>
+      <%= link_to "Delete this order", user_path(user[:id]), method: :delete %>
       <h1>---------------------------------------------------------------</h1>
       <% user.dishes.each do |dish| %>
           <p><%=dish[:name]%></p>
@@ -17,7 +17,7 @@
     <% end %>
   <% else %>
     <% current_user.dishes.each do |dish| %>
-        <p><%=dish[:name]%></p>
+        <i class="material-icons"><%=dish[:name]%></i>
         <%= button_to "Delete dish from your order?", user_dish_path(dish.id), method: :delete %><br>
     <% end %>
     <strong>Alergies:</strong>
