pushing to merge

--- a/waiter_app/app/views/ingredients/index.html.erb
+++ b/waiter_app/app/views/ingredients/index.html.erb
@@ -1,11 +1,11 @@
 
   <h1>List of all the ingredients used in our recipes</h1>
   <h2>select any ingredient to indicate an allergy</h2>
-  <%= button_to "Add an ingredient that's not listed so we can be sure not to include it!", new_ingredient_path %>
+  <%= link_to "Add an ingredient that's not listed so we can be sure not to include it!", new_ingredient_path %>
   <br><br>
   <% @ingredients.each do |ing| %>
     <p><%= link_to "#{ing[:name]}", ingredient_path(ing.id) %></p>
-    <p><%= button_to "Add to dish",
+    <p><%= link_to "Add to dish",
                     :controller=> "ingredients_dishes",
                     :action=> "new",
                     :ingredient_id=>ing[:id] %></p>
