--- a/waiter_app/app/views/ingredients/edit.html.erb
+++ b/waiter_app/app/views/ingredients/edit.html.erb
@@ -5,6 +5,6 @@
     <input type="hidden" name="_method" value="PUT" />
     <input type="text" name="ingredient[name]" value="<%= @ingredient.name %>" />
     <input type="text" name="ingredient[description]" value="<%= @ingredient.description%>" />
-    <input type="submit" value="Chang this ingredient!" />
+    <input type="submit" value="Change this ingredient!" />
   </form>
 </div>
