--- a/waiter_app/app/views/layouts/application.html.erb
+++ b/waiter_app/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <nav>
       <% if user_signed_in? %>
       <pry>
-
+        <%= link_to "Delete this user?", user_path(current_user.id), method: :delete %>
         Logged in as <strong><%= link_to " #{current_user.email}", user_path(current_user.id) %></strong>.
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %> |
