--- a/waiter_app/app/views/users/index.html.erb
+++ b/waiter_app/app/views/users/index.html.erb
@@ -1,10 +1,8 @@
 <div class="user-index-container">
-  <% if current_user.auth == 1 %>
+  <% if current_user.auth == 2 %>
     <% @users.each do |user| %>
       <p><%=user[:email]%>:</p>
-      <h1>---------------------------------------------------------------</h1>
       <%= link_to "Delete this order", user_path(user[:id]), method: :delete %>
-      <h1>---------------------------------------------------------------</h1>
       <% user.dishes.each do |dish| %>
           <p><%=dish[:name]%></p>
           <%= button_to "Delete dish from your order?", user_dish_path(dish.id), method: :delete %><br>
@@ -20,9 +18,11 @@
         <i class="material-icons"><%=dish[:name]%></i>
         <%= button_to "Delete dish from your order?", user_dish_path(dish.id), method: :delete %><br>
     <% end %>
-    <strong>Alergies:</strong>
-    <% current_user.ingredients.each do |ingredient| %>
-      <p><%=ingredient[:name]%></p>
+    <% if current_user.ingredients.length > 0 %>
+      <strong>Alergies:</strong>
+      <% current_user.ingredients.each do |ingredient| %>
+        <p><%=ingredient[:name]%></p>
+      <% end %>
     <% end %>
   <% end %>
 </div>
