--- a/waiter_app/app/views/users/show.html.erb
+++ b/waiter_app/app/views/users/show.html.erb
@@ -1,27 +1,43 @@
-<h1><%= @user[:email] %>:</h1>
-<%= link_to "Add some dishes!", dishes_path %>
-<% if @user.dishes.length > 0 %>
-  <% @user.dishes.each do |dish| %>
-      <p><%= link_to "#{dish[:name]}", dish_path(dish.id) %></p>
-      <%= link_to "Delete this dish from your order?", user_dish_path(dish.id), method: :delete %><br>
-  <% end %>
-<% else %>
-  <% if current_user.auth == 2 %>
-    <p><%= @user.email %> haven't ordered anything yet.</p>
-  <% else %>
-    <p>You haven't ordered yet?</p>
-  <% end %>
-<% end %>
-<% if @user.ingredients.length > 0 %>
-  <strong>Alergies:</strong>
-  <% @user.ingredients.each do |ingredient| %>
-    <p><%= ingredient[:name] %></p>
-    <%= link_to "Remove this Allergy", user_ingredient_path(ingredient.id), method: :delete %>
-  <% end %>
-<% else %>
-  <% if current_user.auth == 2 %>
-    <p><%= @user.email %> doesn't have any allergies at their table.</p>
-  <% else %>
-    <p>No allergies at your table? That can't be correct...</p>
-  <% end %>
-<% end %>
+<h4><%= @user[:email] %>:</h4>
+<%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>Add some dishes!</button>".html_safe, dishes_path %>
+
+<div class="section">
+  <div class="dishes-grid">
+    <div class="row">
+      <div class="col s4 l4 m4 places-holder">
+        <% if @user.dishes.length > 0 %>
+          <% @user.dishes.each do |dish| %>
+            <div class="card hoverable blue-grey lighten-4">
+              <%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>#{dish[:name]}</button>".html_safe, dish_path(dish.id) %>
+              <%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>Delete</button>".html_safe, user_dish_path(dish.id), method: :delete %><br>
+            </div>
+          <% end %>
+        <% else %>
+          <% if current_user.auth == 2 %>
+            <blockquote><%= @user.email %> haven't ordered anything yet.</blockquote>
+          <% else %>
+            <blockquote>You haven't ordered yet?</blockquote>
+          <% end %>
+        <% end %>
+      </div>
+
+      <div class="col s4 l4 m4 places-holder">
+        <% if @user.ingredients.length > 0 %>
+          <strong>Alergies:</strong>
+          <% @user.ingredients.each do |ingredient| %>
+            <div class="card hoverable blue-grey lighten-4">
+              <blockquote><%= ingredient[:name] %></blockquote>
+              <%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>Remove</button>".html_safe, user_ingredient_path(ingredient.id), method: :delete %>
+            </div>
+          <% end %>
+        <% else %>
+          <% if current_user.auth == 2 %>
+            <blockquote><%= @user.email %> doesn't have any allergies at their table.</blockquote>
+          <% else %>
+            <blockquote>No allergies at your table? That can't be correct...</blockquote>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
