--- a/waiter_app/app/views/dishes/show.html.erb
+++ b/waiter_app/app/views/dishes/show.html.erb
@@ -1,24 +1,30 @@
-<div class = "dish-container">
-  <h1><%= @dish.name %></h1>
+<div class="card blue-grey lighten-4">
+  <h2><%= @dish.name %></h2>
   <p><%= @dish.description %></p>
   <p>Course: <%= @dish.course %></p>
   <p>Cost: $<%= @dish.cost %></p>
-  <h4>Ingredients:</h4>
-  <% @dish.ingredients.each do |ing| %>
-    <%= link_to "#{ing[:name]}", ingredient_path(ing[:id]) %>
-    <%= form_tag("/ingredients_dishes/#{ing.id}", method: "delete") do %>
-      <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
-      <%= hidden_field(:dish_id, "", :value=>@dish.id )%>
-      <%= submit_tag( "Delete #{ing[:name]} form #{@dish.name}")%>
-    <%end%>
-      <%= form_tag("/user_ingredients", method: "post") do %>
-        <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
-        <%= hidden_field(:user_id, "", :value=>current_user.id )%>
-        <%= submit_tag( "Add Allergy")%>
-      <% end %>
-      <br>
-      <br>
-  <% end %>
-  <%= link_to "Edit this dish?", edit_dish_path(@dish.id) %>
-  <%= link_to "Delete this dish?", dish_path(@dish.id), method: :delete %>
 </div>
+<h4>Ingredients:</h4>
+<div class="section">
+  <div class="ingredients-grid">
+    <div class="col s4 l4 m4 places-holder">
+      <% @dish.ingredients.each do |ing| %>
+        <%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>#{ing[:name]}</button>".html_safe, ingredient_path(ing[:id]) %>
+        <%= form_tag("/ingredients_dishes/#{ing.id}", method: "delete") do %>
+          <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
+          <%= hidden_field(:dish_id, "", :value=>@dish.id )%>
+          <%= submit_tag( "Delete #{ing[:name]} from #{@dish.name}")%>
+        <%end%>
+          <%= form_tag("/user_ingredients", method: "post") do %>
+            <%= hidden_field(:ingredient_id, "", :value=>ing.id )%>
+            <%= hidden_field(:user_id, "", :value=>current_user.id )%>
+            <%= submit_tag("Add Allergy")%>
+          <% end %>
+          <br>
+          <br>
+      <% end %>
+    </div>
+  </div>
+</div>
+<%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>Edit</button>".html_safe, edit_dish_path(@dish.id) %>
+<%= link_to "<button style='width:100%' class='waves-effect waves-light btn'>Remove</button>".html_safe, dish_path(@dish.id), method: :delete %>
